K8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-server
  namespace: resume-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: your-dockerhub-username/resume-builder-server:latest
          ports:
            - containerPort: 3001
