K8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: resume-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: soumya118/resume-builder-client:1.2
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: resume-builder
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
