K8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: resume-builder
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
