K8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: resume-builder
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
